# Weather-Data-Parallelization

./: CMakeLists.txt  README.md
P-threads/: CMakeLists.txt  README.md  weather_pthread.cpp
openmp/: README.md  weather_openmp.cpp
std::threads/: weather_multithreading.cpp
